# tags

./: .editorconfig  .gitignore  README.md  docker-compose.yml
api/: .dockerignore  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  package.json  tsconfig.json  tsoa.json  tsup.config.ts
api/prisma/: schema.prisma
api/prisma/migrations/20230815055750_add_api/: migration.sql
api/prisma/migrations/20230815094826_change_author_to_string/: migration.sql
api/src/: app.ts
api/src/controller/: previewController.ts
api/src/previews/: previewService.ts  previews.ts
bot/: .dockerignore  Dockerfile  README.md  __init__.py  docker-compose.yml  entrypoint.sh  pyproject.toml
bot/src/: __main__.py
bot/src/impl/: __init__.py  bot.py  http_types.py
bot/src/plugins/: __init__.py  __main__.py
